# chiaki-lg

./: .gitignore  CMakeLists.txt  README.md  build-webos.sh
packaging/: appinfo.json  config.json.example
src/: NDL_directmedia.h  app_log.h  audio.c  audio.h  config.c  config.h  config_import.c  config_import.h  input.c  input.h  main.c  stats.c  stats.h  ui.c  ui.h  video.c  video.h
